fix: landing text spacing and character position

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -98,17 +98,14 @@
   opacity: 0;
 }
 .character-model {
-  height: 80%;
-  height: 80vh;
-  position: absolute;
-  max-width: 1920px;
-  max-height: 1080px;
-  transform: translateX(-50%);
-  width: 100%;
-  left: 50%;
-  z-index: 0;
-  bottom: 50px;
-  pointer-events: inherit;
+  height: 100vh;
+  bottom: 0;
+  z-index: 11;
+  position: fixed;
+  right: -10%;
+  left: auto;
+  transform: none;
+  width: 60%;
 }
 .character-model::after {
   content: "";
